/* 
  Localizable.strings
  AppGarden

  Created by Luiz Diniz Hammerli on 23/08/23.
  
*/

"GRID_VIEW_TITLE" = "App Garden";
"DETAILS_SCREEN_TITLE" = "Details";
"SEARCH_ERROR_TITLE" = "No Results";
"IMAGE_TITLE" = "Title";
"IMAGE_HEIGHT" = "Height";
"IMAGE_WIDTH" = "Width";
"IMAGE_DATE" = "Date";
"SEARCH_ERROR_DESCRIPTION" = "Try a new search.";

// Accessibility

"ACCESSIBILITY_ITEM_NAME" = "Item";
"ACCESSIBILITY_ITEM_OF" = "Of";
"ACCESSIBILITY_ITEM_TITLE_NAME" = "Title";
